# HearthNet

./: .dockerignore  .gitignore  6.0.0  ANDROID_DEPLOYMENT_GUIDE.md  BUILD_GUIDE.md  BUILD_STATUS.md  QUALITY_FIXES_COMPLETED.md  QUALITY_REPORT.md  README.md  TEST_INFRASTRUCTURE_COMPLETE.md  _fix2.py  _fix3.py  _fix_warnings.py  agents.md  app.py  app_nemotron.py  browsermesh.html  count_all_tests.py  coverage_report.txt  fill_phase23.py  fill_reference.py  generate_coverage.py  hearthnet-mesh.html  pre-commit-hook.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.md  upgrade_plan.md
.github/workflows/: release.yml  test.yml
.live_test_node/: events.db
.playwright-mcp/: page-2026-06-10T14-27-49-510Z.yml  page-2026-06-10T14-28-44-543Z.yml  page-2026-06-10T14-28-52-588Z.yml  page-2026-06-10T14-29-00-723Z.yml  page-2026-06-10T14-52-36-986Z.yml  page-2026-06-10T15-16-39-829Z.yml  page-2026-06-10T15-17-36-795Z.yml  page-2026-06-12T13-16-10-970Z.yml
docs/: 00-OVERVIEW.md  ARCHITECTURE.md  CAPABILITY_CONTRACT.md  DEPLOYMENT.md  GLOSSARY.md  HOWTO.md  IMPROVEMENTS.md  M01-identity.md  M02-discovery.md  M03-bus.md  M07-file-blobs.md  M08-ui.md  M10-chat.md  M11-embedding.md  X01-transport.md  X02-events.md  X04-config.md  fieldguide.md  idea.md  impl_ref.md  prd_v2.md  roadmap.md  sample.txt  upgrade_plan.md
docs/cross-cutting/: X03-observability.md
docs/guides/: ANDROID_DEPLOYMENT_GUIDE.md  BUILD_GUIDE.md  HOWTO.md
docs/modules/: M04-llm.md  M05-rag.md  M06-marketplace.md  M09-emergency.md  M12-cli.md  M13-onboarding.md
docs/p2_p3/: 00-OVERVIEW.md  00-OVERVIEW_p3.md  CAPABILITY_CONTRACT_v2.md  CAPABILITY_CONTRACT_v3.md  IMPLEMENTATION_REFERENCE_p3.md  M14-federation.md  M15-relay-tier.md  M16-tokens.md  M17-ocr.md  M18-translation.md  M19-stt-tts.md  M20-vision.md  M21-tool-calls.md  M22-mobile-native.md  M23-e2e-encryption.md  M24-rerank.md  M25-group-chat.md  M26-distributed-inference.md  M27-moe-routing.md  M28-fedlearn.md  M29-lora-beacons.md  M30-evidence-ebkh.md  M31-civil-defense.md  M32-protocol-standard.md  X05-dht.md  X06-websocket.md  X07-federated-metrics.md  X08-tensor-transport.md  X09-conformance-suite.md  readme.md
docs/reports/: BUILD_STATUS.md  COVERAGE_ENHANCEMENT_REPORT.md  COVERAGE_IMPROVEMENT.md  TEST_IMPROVEMENTS.md  TEST_SUITE_REPORT.md
docs/screenshots/: README.md  _mesh_story.html
docs/security/: SECURITY_AUDIT_ASSESSMENT.md  SECURITY_VERIFICATION_SUMMARY.md
hearthnet/: __init__.py  __main__.py  cli.py  config.py  constants.py  controller.py  facades.py  node.py  types.py
hearthnet/blobs/: __init__.py  chunker.py  store.py  transfer.py
hearthnet/bus/: __init__.py  capability.py  health.py  http_transport.py  registry.py  router.py  schema.py  trace.py  transport.py
hearthnet/civdef/: __init__.py  service.py
hearthnet/conformance/: __init__.py  runner.py
hearthnet/crypto/: __init__.py  envelope.py  kem.py  prekeys.py  ratchet.py
hearthnet/dht/: bootstrap.py  kademlia.py
hearthnet/discovery/: __init__.py  mdns.py  peers.py  relay.py  service.py  udp.py
hearthnet/distributed_inference/: __init__.py  pipeline.py  (+1 more)
scripts/: app_manager.bat  check_quality.py  connect_to_hf.py  demo_two_nodes.py  fill_tests.py  gen_screenshots.py  gen_tests.py  live_mesh_test.py  make_proof.py  mesh_story_proof.py  modal_deploy.py  start_mesh_node.py
tests/: conftest.py  test_behavioral_layer.py  test_bus_failover.py  test_capability_contract.py  test_chat_cross_node.py  test_complexity.py  test_components_real.py  test_coverage_boost.py  test_e2e_multinode.py  test_e2e_playwright.py  test_e2e_user_stories.py  test_easter_egg.py  test_events_coverage.py  test_extended_services.py  test_federated_rag.py  test_functional_all_modules.py  test_glossary.py  test_gossip_sync.py  test_howto.py  test_http_peer_routing.py  test_impl_reference.py  test_m01_spec.py  test_m02_spec.py  test_m03_spec.py  test_m04_enhanced.py  test_m04_spec.py  test_m05_enhanced.py  test_m05_spec.py  test_m06_marketplace_real.py  test_m06_spec.py  test_m07_spec.py  test_m08_spec.py  test_m09_spec.py  test_m10_spec.py  test_m11_spec.py  test_m12_spec.py  test_m13_spec.py  test_m14_spec.py  test_m15_spec.py  test_m16_spec.py  (+51 more)
webagent/: index.html  index.js
(+152 files in other folders)
